--- a/css/styles.css
+++ b/css/styles.css
@@ -320,8 +320,51 @@ body {
 }
 .position {
   text-align: center;
+  margin-bottom: 8px;
+}
+.social-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.social-list-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background-color: var(--secondary-accent-color);
+}
+.social-list-link:hover,
+.social-list-link:focus {
+  background-color: var(--accent-color);
+}
+
+.social-list-icon {
+  fill: var(--background-color);
 }
 /*-------------------- /OUR TEAM--------------- */
+
+/*-------------------- CUSTOMERS--------------- */
+.customers-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+}
+
+.customer-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 168px;
+  height: 88px;
+  border-radius: 4px;
+  border: 1px solid #8e8f99;
+  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+/*-------------------- /CUSTOMERS--------------- */
 
 /*-------------------- OUR JOBS--------------- */
 .section-portfolio {
@@ -393,4 +436,18 @@ body {
 }
 .accent-logo-footer {
   color: var(--background-color);
+}
+
+.social-media-footer {
+  display: flex;
+  color: var(--primary-white-color);
+  flex-direction: column;
+  align-items: start;
+}
+.social-media-title {
+  margin-bottom: 16px;
+}
+.footer-content {
+  display: flex;
+  gap: 120px;
 }
