--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
   --background-color: #f4f4fd;
   --background-color-hero: rgba(46, 47, 66, 0.7);
   --border-color: #e7e9fc;
+  --accent-green-color: #31d0aa;
 }
 h1,
 h2,
@@ -114,6 +115,7 @@ body {
 
   color: var(--primary-white-color);
   background: var(--secondary-accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .button-primary:hover,
 .button-primary:focus {
@@ -314,6 +316,8 @@ body {
   padding-left: 16px;
   padding-right: 16px;
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px rgba(46, 47, 66, 0.08), 0px 1px rgba(46, 47, 66, 0.16),
+    0px 1px rgba(46, 47, 66, 0.08);
 }
 .name-surname {
   text-align: center;
@@ -362,7 +366,12 @@ body {
   height: 88px;
   border-radius: 4px;
   border: 1px solid #8e8f99;
-  box-shadow: 0px 4px rgba(0, 0, 0, 0.25);
+}
+
+.customer-link:hover,
+.customer-link:focus {
+  border: 1px solid var(--accent-color);
+  box-shadow: none;
 }
 /*-------------------- /CUSTOMERS--------------- */
 
@@ -450,4 +459,9 @@ body {
 .footer-content {
   display: flex;
   gap: 120px;
+}
+
+.footer-accent:hover,
+.footer-accent:focus {
+  background-color: var(--accent-green-color);
 }
