--- a/css/styles.css
+++ b/css/styles.css
@@ -190,6 +190,15 @@ body {
 .menu-link:focus {
   color: var(--accent-color);
 }
+/* .menu-link::after
+ {
+  display: flex;
+  width: 66px;
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  content: '';
+} */
 
 .logo-header {
   margin-right: 76px;
@@ -265,6 +274,16 @@ body {
 .feature-content {
   flex-basis: calc((100% - 72px) / 4);
 }
+.feature-list-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  border-radius: 4px;
+  background-color: var(--background-color);
+  cursor: auto;
+}
 
 /*-------------------- /FEATURES--------------- */
 
@@ -316,8 +335,8 @@ body {
   padding-left: 16px;
   padding-right: 16px;
   border-radius: 0px 0px 4px 4px;
-  box-shadow: 0px 2px rgba(46, 47, 66, 0.08), 0px 1px rgba(46, 47, 66, 0.16),
-    0px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .name-surname {
   text-align: center;
@@ -346,7 +365,7 @@ body {
 }
 
 .social-list-icon {
-  fill: var(--background-color);
+  fill: var(--primary-white-color);
 }
 /*-------------------- /OUR TEAM--------------- */
 
@@ -372,6 +391,15 @@ body {
 .customer-link:focus {
   border: 1px solid var(--accent-color);
   box-shadow: none;
+}
+
+.customer-icon {
+  fill: #8e8f99;
+}
+
+.customer-link:hover .customer-icon,
+.customer-link:hover .customer-icon {
+  fill: var(--accent-color);
 }
 /*-------------------- /CUSTOMERS--------------- */
 
