--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
   --background-color-hero: rgba(46, 47, 66, 0.7);
   --border-color: #e7e9fc;
   --accent-green-color: #31d0aa;
+  --customer-icon-color: #afb1b8;
 }
 h1,
 h2,
@@ -146,9 +147,9 @@ body {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   border: 1px solid transparent;
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08);
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .content {
@@ -166,6 +167,8 @@ body {
 .page-header-container {
   display: flex;
   align-items: center;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-nav {
   display: flex;
@@ -249,10 +252,15 @@ body {
 .hero {
   padding-top: 188px;
   padding-bottom: 188px;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.25), rgba(0, 0, 0, 0.25)),
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
     url(../images/bg.jpg);
   background-size: cover;
   background-color: var(--background-color-hero);
+  background-repeat: no-repeat;
+  max-width: 1440px;
 }
 
 .hero-title {
@@ -283,9 +291,9 @@ body {
   align-items: center;
   width: 264px;
   height: 112px;
+  margin-bottom: 8px;
   border-radius: 4px;
   background-color: var(--background-color);
-  cursor: auto;
 }
 
 /*-------------------- /FEATURES--------------- */
@@ -299,7 +307,7 @@ body {
 .section-title {
   font-weight: 700;
   font-size: 36px;
-  line-height: 1.11;
+  line-height: 1.1;
 
   text-align: center;
   letter-spacing: 0.02em;
@@ -331,15 +339,15 @@ body {
 }
 .content {
   flex-basis: calc((100% - 72px) / 4);
-}
-.employees-wrapper {
-  padding-top: 32px;
-  padding-bottom: 32px;
-  padding-left: 16px;
-  padding-right: 16px;
-  border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
+.employees-wrapper {
+  padding: 32px 0;
+  /* padding-bottom: 32px;
+  padding-left: 16px;
+  padding-right: 16px; */
 }
 .name-surname {
   text-align: center;
@@ -368,7 +376,7 @@ body {
 }
 
 .social-list-icon {
-  fill: var(--primary-white-color);
+  fill: var(--background-color);
 }
 /*-------------------- /OUR TEAM--------------- */
 
@@ -388,22 +396,20 @@ body {
   height: 88px;
   border-radius: 4px;
   border: 1px solid #8e8f99;
+  color: var(--customer-icon-color);
 }
 
 .customer-link:hover,
 .customer-link:focus {
   border: 1px solid var(--accent-color);
   box-shadow: none;
+  color: var(--accent-color);
 }
 
 .customer-icon {
-  fill: #8e8f99;
+  fill: currentColor;
 }
 
-.customer-link:hover .customer-icon,
-.customer-link:hover .customer-icon {
-  fill: var(--accent-color);
-}
 /*-------------------- /CUSTOMERS--------------- */
 
 /*-------------------- OUR JOBS--------------- */
@@ -431,6 +437,16 @@ body {
   flex-basis: calc((100% - 48px) / 3);
 }
 
+.our-jobs-link {
+  display: block;
+}
+.our-jobs-link:hover,
+.our-jobs-link:focus {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 1px rgba(46, 47, 66, 0.16);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
 .our-jobs-wrapper {
   border: 1px solid var(--border-color);
   border-top: none;
@@ -438,13 +454,6 @@ body {
   padding-bottom: 32px;
   padding-left: 16px;
   padding-right: 16px;
-}
-.our-jobs-wrapper:hover,
-.our-jobs-wrapper:focus {
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px 1px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-  cursor: pointer;
 }
 
 /*-------------------- /OUR JOBS--------------- */
@@ -489,14 +498,21 @@ body {
   display: flex;
   color: var(--primary-white-color);
   flex-direction: column;
-  align-items: start;
+  align-items: baseline;
 }
 .social-media-title {
   margin-bottom: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 .footer-content {
   display: flex;
   gap: 120px;
+}
+.social-list-footer {
+  display: flex;
+  gap: 16px;
 }
 
 .footer-accent:hover,
