--- a/css/styles.css
+++ b/css/styles.css
@@ -147,9 +147,8 @@ body {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   border: 1px solid transparent;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.08);
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .content {
@@ -162,13 +161,13 @@ body {
   padding-top: 23.5px;
   padding-bottom: 23.5px;
   border-bottom: 1px solid var(--border-color);
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .page-header-container {
   display: flex;
   align-items: center;
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .page-nav {
   display: flex;
@@ -260,6 +259,7 @@ body {
   background-size: cover;
   background-color: var(--background-color-hero);
   background-repeat: no-repeat;
+  background-position: center;
   max-width: 1440px;
 }
 
@@ -442,9 +442,8 @@ body {
 }
 .our-jobs-link:hover,
 .our-jobs-link:focus {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
-  box-shadow: 0px 1px 1px rgba(46, 47, 66, 0.16);
-  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .our-jobs-wrapper {
@@ -498,7 +497,6 @@ body {
   display: flex;
   color: var(--primary-white-color);
   flex-direction: column;
-  align-items: baseline;
 }
 .social-media-title {
   margin-bottom: 16px;
@@ -509,6 +507,7 @@ body {
 .footer-content {
   display: flex;
   gap: 120px;
+  align-items: baseline;
 }
 .social-list-footer {
   display: flex;
